fix(annotator): eliminate compiler lag, flush documents, and resolve WSL path mapping